detection plots allows interactive exploration of agonia boxes detection and boxes traces, all functions in utilsss

--- a/demo_pipeline.ipynb
+++ b/demo_pipeline.ipynb
@@ -102,7 +102,7 @@
    "source": [
     "#fnames = ['/home/pedro/Work/AGOnIA/Boxes-data/Caiman_test/866.avi']\n",
     "#fnames = ['/home/pedro/Work/AGOnIA/Boxes-data/Caiman_test/501271265_5000.tif']\n",
-    "fnames = ['/home/pedro/Work/AGOnIA/Boxes-data/Seeded-Caiman/croped/501271265_5000_crop.tif']"
+    "fnames = ['/home/pedro/Work/Hippocampus/1photon/downsampled/mc_preprocessed_spacial_downsampled2_20190329170534_0.tif']"
    ]
   },
   {
@@ -144,8 +144,8 @@
    "outputs": [],
    "source": [
     "# dataset dependent parameters\n",
-    "fr = 1/0.758758526502838    # imaging rate in frames per second\n",
-    "decay_time = 0.65           # length of a typical transient in seconds\n",
+    "fr = 14.913#1/0.758758526502838    # imaging rate in frames per second\n",
+    "decay_time = 0.6#0.65           # length of a typical transient in seconds\n",
     "\n",
     "# motion correction parameters\n",
     "strides = (48, 48)          # start a new patch for pw-rigid motion correction every x pixels\n",
@@ -332,6 +332,16 @@
    "outputs": [],
    "source": [
     "Yr, dims, T = cm.load_memmap('/home/pedro/Work/AGOnIA/Boxes-data/501271265_5000_els__d1_512_d2_512_d3_1_order_F_frames_5000_.mmap')\n",
+    "images = np.reshape(Yr.T, [T] + list(dims), order='F') "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Yr, dims, T = cm.load_memmap('/home/pedro/Work/Hippocampus/1photon/downsampled/memmap__d1_367_d2_440_d3_1_order_C_frames_4476_.mmap')\n",
     "images = np.reshape(Yr.T, [T] + list(dims), order='F') "
    ]
   },
@@ -695,6 +705,15 @@
    "outputs": [],
    "source": [
     "help(cnm2.estimates.select_components)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(cnm2.estimates.F_dff[-1])"
    ]
   },
   {
