file to do astrocite detection and file to do agonia analysis for paper-figure, substracting neuropil and correlation analysis

--- a/demo_pipeline.ipynb
+++ b/demo_pipeline.ipynb
@@ -102,7 +102,9 @@
    "source": [
     "#fnames = ['/home/pedro/Work/AGOnIA/Boxes-data/Caiman_test/866.avi']\n",
     "#fnames = ['/home/pedro/Work/AGOnIA/Boxes-data/Caiman_test/501271265_5000.tif']\n",
-    "fnames = ['/home/pedro/Work/Hippocampus/1photon/downsampled/mc_preprocessed_spacial_downsampled2_20190329170534_0.tif']"
+    "#fnames = ['/home/pedro/Work/Hippocampus/1photon/downsampled/mc_preprocessed_spacial_downsampled2_20190329170534_0.tif']\n",
+    "fnames = ['/media/pedro/DATAPART1/AGOnIA/datasets_figure/946.tif']\n",
+    "#fnames = ['/media/pedro/DATAPART1/Zebastiano/DualColor/2019Dec10/5098/TSeries-12082019-1046-2512/Analysis/TSeries-12082019-1046-2512_Ch1__movie.tif']"
    ]
   },
   {
@@ -124,7 +126,7 @@
     "    m_orig = cm.load_movie_chain(fnames)\n",
     "    ds_ratio = 0.2\n",
     "    m_orig.resize(1, 1, ds_ratio).play(\n",
-    "        q_max=99.5, fr=100, magnification=2)"
+    "        q_max=99.5, fr=10, magnification=2)"
    ]
   },
   {
@@ -144,24 +146,24 @@
    "outputs": [],
    "source": [
     "# dataset dependent parameters\n",
-    "fr = 14.913#1/0.758758526502838    # imaging rate in frames per second\n",
-    "decay_time = 0.6#0.65           # length of a typical transient in seconds\n",
+    "fr = 1/0.330501113982675#14.913#1/0.758758526502838    # imaging rate in frames per second\n",
+    "decay_time = 0.64#0.65           # length of a typical transient in seconds\n",
     "\n",
     "# motion correction parameters\n",
-    "strides = (48, 48)          # start a new patch for pw-rigid motion correction every x pixels\n",
-    "overlaps = (24, 24)         # overlap between pathes (size of patch strides+overlaps)\n",
-    "max_shifts = (6,6)          # maximum allowed rigid shifts (in pixels)\n",
-    "max_deviation_rigid = 3     # maximum shifts deviation allowed for patch with respect to rigid shifts\n",
+    "strides = (24,24)#(48, 48)          # start a new patch for pw-rigid motion correction every x pixels\n",
+    "overlaps = (12,12)#(24, 24)         # overlap between pathes (size of patch strides+overlaps)\n",
+    "max_shifts = (10,10)#(6,6)          # maximum allowed rigid shifts (in pixels)\n",
+    "max_deviation_rigid = 8#3     # maximum shifts deviation allowed for patch with respect to rigid shifts\n",
     "pw_rigid = True             # flag for performing non-rigid motion correction\n",
     "\n",
     "# parameters for source extraction and deconvolution\n",
     "p = 1                       # order of the autoregressive system\n",
     "gnb = 2                     # number of global background components\n",
     "merge_thr = 0.85            # merging threshold, max correlation allowed\n",
-    "rf = 15                     # half-size of the patches in pixels. e.g., if rf=25, patches are 50x50\n",
+    "rf = 20#15                     # half-size of the patches in pixels. e.g., if rf=25, patches are 50x50\n",
     "stride_cnmf = 6             # amount of overlap between the patches in pixels\n",
     "K = 4                       # number of components per patch\n",
-    "gSig = [8, 8]             # expected half size of neurons in pixels\n",
+    "gSig = [10,10]#[8, 8]             # expected half size of neurons in pixels\n",
     "method_init = 'greedy_roi'  # initialization method (if analyzing dendritic data using 'sparse_nmf')\n",
     "ssub = 1                    # spatial subsampling during initialization\n",
     "tsub = 1                    # temporal subsampling during intialization\n",
@@ -296,7 +298,7 @@
     "    ds_ratio = 0.2\n",
     "    cm.concatenate([m_orig.resize(1, 1, ds_ratio) - mc.min_mov*mc.nonneg_movie,\n",
     "                    m_els.resize(1, 1, ds_ratio)], \n",
-    "                   axis=2).play(fr=60, gain=15, magnification=2, offset=0)  # press q to exit"
+    "                   axis=2).play(fr=10, magnification=2, offset=0)  # press q to exit gain=15,"
    ]
   },
   {
@@ -517,7 +519,8 @@
    "outputs": [],
    "source": [
     "# accepted components\n",
-    "cnm2.estimates.nb_view_components(img=Cn, idx=cnm2.estimates.idx_components)"
+    "#cnm2.estimates.nb_view_components(img=Cn, idx=cnm2.estimates.idx_components)\n",
+    "cnm2.estimates.nb_view_components(img=np.median(images,axis=0), idx=cnm2.estimates.idx_components, denoised_color='red', cmap='viridis')\n"
    ]
   },
   {
@@ -528,9 +531,36 @@
    "source": [
     "# rejected components\n",
     "if len(cnm2.estimates.idx_components_bad) > 0:\n",
-    "    cnm2.estimates.nb_view_components(img=Cn, idx=cnm2.estimates.idx_components_bad)\n",
+    "    #cnm2.estimates.nb_view_components(img=Cn, idx=cnm2.estimates.idx_components_bad)\n",
+    "    cnm2.estimates.nb_view_components(img=np.median(images,axis=0), idx=cnm2.estimates.idx_components_bad, denoised_color='red', cmap='viridis')\n",
     "else:\n",
     "    print(\"No components were rejected.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cell_activity_good = [cell/max(cell) for cell in cnm2.estimates.C[cnm2.estimates.idx_components]]\n",
+    "cell_activity_bad = [cell/max(cell) for cell in cnm2.estimates.C[cnm2.estimates.idx_components_bad]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = plt.figure(figsize=(18,8))\n",
+    "grid = plt.GridSpec(7, 1, hspace=0.1)\n",
+    "plt.subplot(grid[0])\n",
+    "#plt.imshow(cell_activity_good,aspect='auto')\n",
+    "plt.imshow(cnm2.estimates.C[cnm2.estimates.idx_components],aspect='auto')\n",
+    "plt.subplot(grid[1:])\n",
+    "#plt.imshow(cell_activity_bad,aspect='auto')\n",
+    "plt.imshow(cnm2.estimates.C[cnm2.estimates.idx_components_bad],aspect='auto')\n"
    ]
   },
   {
@@ -686,7 +716,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "denoised.resize(1, 1, 0.2).play(q_max=99.5, fr=5, magnification=2)"
+    "denoised.resize(1, 1, 0.2).play(q_max=99.5, fr=3, magnification=2)"
    ]
   },
   {
@@ -721,7 +751,93 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "m_els.play(fr=10, magnification=2, offset=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "m_els.save('/media/pedro/DATAPART1/Zebastiano/DualColor/2019Dec10/5098/TSeries-12082019-1046-2512/Analysis/prueba3.tif')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Extras"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Run motion correction for many movies"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PATH = '/media/pedro/DATAPART1/Zebastiano/mc_trials/2018Jul26'\n",
+    "ANIMALS = os.listdir(PATH)\n",
+    "for animal in ANIMALS:\n",
+    "    series_path = [T_series for T_series in os.listdir(os.path.join(PATH,animal)) if T_series.startswith('TSeries')]\n",
+    "    for series in series_path:\n",
+    "        video = [vid for vid in os.listdir(os.path.join(PATH,animal,series,'Analysis')) if vid.endswith('.tiff')]\n",
+    "        fnames = [os.path.join(PATH,animal,series,'Analysis',video[0])]\n",
+    "\n",
+    "        # motion correction parameters\n",
+    "        strides = (48, 48)          # start a new patch for pw-rigid motion correction every x pixels\n",
+    "        overlaps = (24, 24)         # overlap between pathes (size of patch strides+overlaps)\n",
+    "        max_shifts = (10,10)          # maximum allowed rigid shifts (in pixels)\n",
+    "        max_deviation_rigid = 5     # maximum shifts deviation allowed for patch with respect to rigid shifts\n",
+    "        pw_rigid = True             # flag for performing non-rigid motion correction\n",
+    "        opts_dict = {'fnames': fnames,\n",
+    "                    'decay_time': decay_time,\n",
+    "                    'strides': strides,\n",
+    "                    'overlaps': overlaps,\n",
+    "                    'max_shifts': max_shifts,\n",
+    "                    'max_deviation_rigid': max_deviation_rigid,\n",
+    "                    'pw_rigid': pw_rigid}\n",
+    "\n",
+    "        opts = params.CNMFParams(params_dict=opts_dict)\n",
+    "\n",
+    "        mc = MotionCorrect(fnames, dview=dview, **opts.get_group('motion'))\n",
+    "\n",
+    "        mc.motion_correct(save_movie=True)\n",
+    "        m_els = cm.load(mc.fname_tot_els)\n",
+    "        border_to_0 = 0 if mc.border_nan is 'copy' else mc.border_to_0 \n",
+    "\n",
+    "        m_els.save(os.path.join(PATH,animal,series,'Analysis','caiman_mc_'+video[0][:-1]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Save Memmap and run Caiman on already motion corrected movie"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fname_new = cm.save_memmap(fnames, base_name='memmap_', order='C',\n",
+    "                           border_to_0=0, dview=dview) # exclude borders\n",
+    "\n",
+    "Yr, dims, T = cm.load_memmap(fname_new)\n",
+    "images = np.reshape(Yr.T, [T] + list(dims), order='F')\n",
+    "cnm3 = cnmf.CNMF(n_processes, params=opts, dview=dview)\n",
+    "cnm3 = cnm3.fit(images)"
+   ]
   }
  ],
  "metadata": {
