fix caiman-agonia correlations calculations + start exploring event detection for analysis_for_figure + for utils add posibility of including neuropil subtraction in trace_correlation function, fixed subtract_neuropil function to consider correspondance of missing caiman factors + added event overlap and event_periods_correlation functions

--- a/detection_plots.ipynb
+++ b/detection_plots.ipynb
@@ -46,7 +46,9 @@
    "source": [
     "#data_path = '/home/pedro/Work/Hippocampus/1photon/downsampled'\n",
     "#data_path = '/media/pedro/DATAPART1/Zebastiano/DualColor/2019Dec10/5098/TSeries-12082019-1046-2512/Analysis'\n",
-    "data_path = '/media/pedro/DATAPART1/AGOnIA/datasets_figure/prueba'\n",
+    "#data_path = '/media/pedro/DATAPART1/AGOnIA/datasets_figure/prueba'\n",
+    "#data_path = '/media/pedro/Elements/Zebastiano/VR_2P/PAPER_ANALYSIS/VR_Respawn_analysis_Neurons/prueba'\n",
+    "data_path = '/media/pedro/DATAPART1/AGOnIA/datasets_figure/VPM'\n",
     "ut.boxes_exploration(data_path)"
    ]
   },
@@ -66,7 +68,8 @@
    "outputs": [],
    "source": [
     "#data_path = '/home/pedro/Work/Hippocampus/1photon/downsampled'\n",
-    "data_path = '/media/pedro/DATAPART1/AGOnIA/datasets_figure/prueba'\n",
+    "#data_path = '/media/pedro/DATAPART1/AGOnIA/datasets_figure/prueba'\n",
+    "#data_path = '/media/pedro/Elements/Zebastiano/VR_2P/PAPER_ANALYSIS/VR_Respawn_analysis_Neurons/prueba'\n",
     "#data_path = '/media/pedro/DATAPART1/Zebastiano/DualColor/2019Dec10/5098/TSeries-12082019-1046-2512/Analysis'\n",
     "ut.boxes_exploration_interactive(data_path)"
    ]
@@ -240,7 +243,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.6.9"
   },
   "toc": {
    "base_numbering": 1,
