code for analysis of mariangelas data and the notebooks for her to explore the data and detection

--- a/detection_plots.ipynb
+++ b/detection_plots.ipynb
@@ -48,7 +48,9 @@
     "#data_path = '/media/pedro/DATAPART1/Zebastiano/DualColor/2019Dec10/5098/TSeries-12082019-1046-2512/Analysis'\n",
     "#data_path = '/media/pedro/DATAPART1/AGOnIA/datasets_figure/prueba'\n",
     "#data_path = '/media/pedro/Elements/Zebastiano/VR_2P/PAPER_ANALYSIS/VR_Respawn_analysis_Neurons/prueba'\n",
-    "data_path = '/media/pedro/DATAPART1/AGOnIA/datasets_figure/VPM'\n",
+    "#data_path = '/media/pedro/DATAPART1/Sara/2P_VR_Data/segmentation_test/room1'\n",
+    "data_path = '/media/pedro/DATAPART1/Sara/2P_VR_Data/ROOM_4/2020Feb11/0003/motion_corrected/TSeries-02112020-1107-1335'\n",
+    "\n",
     "ut.boxes_exploration(data_path)"
    ]
   },
@@ -70,7 +72,18 @@
     "#data_path = '/home/pedro/Work/Hippocampus/1photon/downsampled'\n",
     "#data_path = '/media/pedro/DATAPART1/AGOnIA/datasets_figure/prueba'\n",
     "#data_path = '/media/pedro/Elements/Zebastiano/VR_2P/PAPER_ANALYSIS/VR_Respawn_analysis_Neurons/prueba'\n",
-    "#data_path = '/media/pedro/DATAPART1/Zebastiano/DualColor/2019Dec10/5098/TSeries-12082019-1046-2512/Analysis'\n",
+    "data_path = '/media/pedro/DATAPART1/Sara/2P_VR_Data/ROOM_4/2020Feb10/0001/motion_corrected/TSeries-02102020-1413-1324'\n",
+    "ut.boxes_exploration_interactive(data_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_path = '/media/pedro/DATAPART1/Sara/2P_VR_Data/ROOM_4/2020Feb10/0001/motion_corrected/TSeries-02102020-1413-1325'\n",
+    "\n",
     "ut.boxes_exploration_interactive(data_path)"
    ]
   },
