--- a/detection_plots.ipynb
+++ b/detection_plots.ipynb
@@ -49,7 +49,7 @@
     "#data_path = '/media/pedro/DATAPART1/AGOnIA/datasets_figure/prueba'\n",
     "#data_path = '/media/pedro/Elements/Zebastiano/VR_2P/PAPER_ANALYSIS/VR_Respawn_analysis_Neurons/prueba'\n",
     "#data_path = '/media/pedro/DATAPART1/Sara/2P_VR_Data/segmentation_test/room1'\n",
-    "data_path = '/media/pedro/DATAPART1/Sara/2P_VR_Data/ROOM_4/2020Feb11/0003/motion_corrected/TSeries-02112020-1107-1335'\n",
+    "data_path = '/media/pedro/DATAPART1/AGOnIA/datasets_figure/neurofinder/neurofinder.02.00'\n",
     "\n",
     "ut.boxes_exploration(data_path)"
    ]
@@ -256,7 +256,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.4"
   },
   "toc": {
    "base_numbering": 1,
