split signal to noise vs correlation plots to see each dataset in a different subplot

--- a/detection_plots.ipynb
+++ b/detection_plots.ipynb
@@ -12,7 +12,6 @@
     "import numpy as np\n",
     "import panel as pn\n",
     "import pandas as pd\n",
-    "import caiman as cm\n",
     "import panel as pn\n",
     "import holoviews as hv\n",
     "import events_astro as evs\n",
@@ -20,13 +19,14 @@
     "from matplotlib.patches import Rectangle\n",
     "from holoviews.streams import Stream, param\n",
     "from scipy.ndimage.measurements import center_of_mass\n",
-    "from caiman.source_extraction.cnmf import cnmf as cnmf\n",
-    "from caiman.source_extraction.cnmf import params as params\n",
     "with warnings.catch_warnings():\n",
     "    warnings.filterwarnings(\"ignore\",category=FutureWarning)\n",
     "    warnings.filterwarnings(\"ignore\",category=DeprecationWarning)\n",
     "    warnings.filterwarnings(\"ignore\",category=FutureWarning)\n",
     "    import utilsss as ut\n",
+    "    import caiman as cm\n",
+    "    from caiman.source_extraction.cnmf import cnmf as cnmf\n",
+    "    from caiman.source_extraction.cnmf import params as params\n",
     "hv.extension('bokeh')\n"
    ]
   },
@@ -49,7 +49,7 @@
     "#data_path = '/media/pedro/DATAPART1/AGOnIA/datasets_figure/prueba'\n",
     "#data_path = '/media/pedro/Elements/Zebastiano/VR_2P/PAPER_ANALYSIS/VR_Respawn_analysis_Neurons/prueba'\n",
     "#data_path = '/media/pedro/DATAPART1/Sara/2P_VR_Data/segmentation_test/room1'\n",
-    "data_path = '/media/pedro/DATAPART1/AGOnIA/VPM/moco954'\n",
+    "data_path = '/media/pedro/DATAPART1/Sara/2P_VR_Data/ROOM_4/2020Mar11/008128/motion_corrected/concatenated'\n",
     "ut.boxes_exploration(data_path)"
    ]
   },
@@ -68,10 +68,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "    Score = .15\n",
+    "    data_name,median_projection,fnames,fname_new,results_caiman_path,boxes_path = ut.get_files_names(data_path)\n",
+    "    Yr, dims, T = cm.load_memmap(fname_new)\n",
+    "    images = np.reshape(Yr.T, [T] + list(dims), order='F')\n",
+    "    with open(boxes_path,'rb') as f:\n",
+    "        boxes = pickle.load(f)\n",
+    "        f.close()\n",
+    "    boxes = boxes[boxes[:,4]>Score].astype('int')\n",
+    "    roi_bounds = hv.Path([hv.Bounds(tuple([roi[0],median_projection.shape[0]-roi[1],roi[2],median_projection.shape[0]\n",
+    "                                           -roi[3]])) for roi in boxes[:,:4]]).options(color='red')\n",
+    "    img = hv.Image(median_projection,bounds=(0,0,median_projection.shape[1],median_projection.shape[0]\n",
+    "                                                          )).options(cmap='gray')\n",
+    "    output = (img*roi_bounds).opts(width=600,height=600)\n",
+    "    hv.save(output, '/media/pedro/DATAPART1/Sara/2P_VR_Data/ROOM_4/2020Feb10/0001/ago_boxes_presentation.png', fmt='png')\n",
+    "  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#data_path = '/home/pedro/Work/Hippocampus/1photon/downsampled'\n",
     "#data_path = '/media/pedro/DATAPART1/AGOnIA/datasets_figure/prueba'\n",
     "#data_path = '/media/pedro/Elements/Zebastiano/VR_2P/PAPER_ANALYSIS/VR_Respawn_analysis_Neurons/prueba'\n",
-    "data_path = '/media/pedro/DATAPART1/AGOnIA/VPM/moco954'\n",
+    "#data_path = '/media/pedro/DATAPART1/AGOnIA/VPM/moco954'\n",
     "ut.boxes_exploration_interactive(data_path)"
    ]
   },
@@ -81,7 +104,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_path = '/media/pedro/DATAPART1/Sara/2P_VR_Data/ROOM_4/2020Feb10/0001/motion_corrected/TSeries-02102020-1413-1325'\n",
+    "data_path = '/media/pedro/DATAPART1/Sara/2P_VR_Data/ROOM_1/2019Dec10/5336/motion_corrected/concatenated'\n",
     "\n",
     "ut.boxes_exploration_interactive(data_path)"
    ]
@@ -255,7 +278,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.6.9"
   },
   "toc": {
    "base_numbering": 1,
